--- a/socket_pack/makefile
+++ b/socket_pack/makefile
@@ -1,10 +1,4 @@
-echo_client: ../robust_io/rio.o socket_pack.o echo_client.o
-	gcc ../robust_io/rio.o socket_pack.o echo_client.o -o echo_client
-echo_server: ../robust_io/rio.o socket_pack.o echo_server.o
-	gcc ../robust_io/rio.o socket_pack.o echo_server.o -o echo_server
-echo_client.o: ../robust_io/rio.h socket_pack.h echo_client.c
-	gcc -c echo_client.c -o echo_client.o
-echo_server.o: ../robust_io/rio.h socket_pack.h echo_server.c
-	gcc -c echo_server.c -o echo_server.o
-clean:
-	rm echo_client.o echo_server.o echo_client echo_server
+socket_pack.o: socket_pack.h socket_pack.c
+	gcc -c socket_pack.c -o socket_pack.o
+clean: 
+	rm socket_pack.o
